2007-04-17  Dalibor Topic  <robilad@kaffe.org>

	* m4/acinclude.m4 (CLASSPATH_CHECK_JAVAH):
	Use AC_CHECK_PROGS and AC_MSG_ERROR. Check for
	gjavah, gcjh-wrapper-4.1 and gcjh-4.1. Error out
	when no javah implementation can be found.

2007-04-17  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (CLASSPATH_WITH_JAVAH): Only check if
	the JNI headers need to be regenerated.

	* m4/acinclude.m4 (USER_SPECIFIED_JAVAH): Removed unused
	conditional.

2007-04-17  Dalibor Topic  <robilad@kaffe.org>

	* lib/Makefile.am (JAVAH): Removed unused variable.

2007-04-17  Casey Marshall  <csm@gnu.org>

	PR classpath/31302:
	* gnu/javax/net/ssl/provider/SSLSocketImpl.java (SSLSocketImpl):
	Always make a new socket.
	(bind, connect, getInetAddress, getLocalAddress, getPort,
	getLocalPort, getRemoteSocketAddress, getLocalSocketAddress,
	setTcpNoDelay, getTcpNoDelay, setSoLinger, getSoLinger,
	setOOBInline, getOOBInline, setSoTimeout, getSoTimeout,
	setSendBufferSize, getSendBufferSize, setReceiveBufferSize,
	getReceiveBufferSize, setKeepAlive, getKeepAlive, setTrafficClass,
	getTrafficClass, setReuseAddress, getReuseAddress, close,
	shutdownInput, shutdownOutput, isConnected, isBound, isClosed,
	isInputShutdown, isOutputShutdown): Always use
	'underlyingSocket'.

2007-04-16  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AM_PROG_CC_C_O): Added to fix automake 1.10
	warning.

2007-04-16  Dalibor Topic  <robilad@kaffe.org>

	* native/plugin/Makefile.am (libgcjwebplugin_la_LDFLAGS):
	Added AM_LDFLAGS for automake 1.10.

2007-04-16  Tom Tromey  <tromey@redhat.com>

	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=236614
	* gnu/javax/net/ssl/provider/SSLSocketFactoryImpl.java
	(createSocket): Change order of delegation.

2007-04-16  Andrew Haley  <aph@redhat.com>

	* java/io/ObjectInputStream.java: (parseContent):  Call (String,
	Object) version of dumpElementln.
	(dumpElementln(String, Object)): New method.
	* java/io/ObjectOutputStream.java (writeObject): Call (String,