@@ -1,3 +1,11 @@
+2007-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* native/jni/java-net/local.c:
+	Fix import of FIONREAD.
+	* native/jni/java-nio/gnu_java_nio_VMChannel.c,
+	* native/jni/native-lib/cpnet.c:
+	Likewise.
+	
 2007-04-17  Dalibor Topic  <robilad@kaffe.org>
 
 	* m4/acinclude.m4 (CLASSPATH_CHECK_JAVAH):
